# pixi-microdrop

./: .gitignore  README.md  launch_microdrop.ps1  launch_microdrop.sh  microdrop.bat  microdrop_setup.py  pluggable_protocol.md  run_microdrop.ps1  run_microdrop.sh
.github/workflows/: release-setup-exe.yml
microdrop-py/: CLAUDE.md  PRESENTATION-GUIDE.md  microdrop.py  pyproject.toml
microdrop-py/.claude/: actor_naming_cleanup.md  logging_decouple_plan.md  ppt7_body.md  ppt7_plan.md  ppt7_pr_body.md  property_trait_followup.md  settings.json  settings.local.json
microdrop-py/.claude/skills/gen-test/: SKILL.md
microdrop-py/.claude/skills/issue/: SKILL.md
microdrop-py/.claude/skills/microdrop-conventions/: SKILL.md
microdrop-py/.claude/skills/new-plugin/: SKILL.md
microdrop-py/.claude/skills/run-microdrop/: SKILL.md
microdrop-py/tests/: test_microdrop_entry.py
