[project]
name = "microdrop-py"
version = "0.1.0"
authors = [{name = "Vigne-hub", email = "vignesh.rajesh@outlook.com"}]
requires-python = ">= 3.11"
dependencies = ["pyside6<=6.9.2,<7", "dotenv>=0.9.9,<0.10"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "alexsk", "vignesh229", "https://prefix.dev/microdrop-plugins"]
platforms = ["linux-aarch64", "win-64", "osx-arm64"]

# --- System Requirements ---
# Preserved from Linux config. This ensures manylinux_2_31 compatibility
# on Linux. Pixi will safely ignore this on Windows.
[tool.pixi.system-requirements]
libc = { family = "glibc", version = "2.31" }

[tool.pixi.pypi-dependencies]
microdrop_py = { path = ".", editable = true }

# Ship every package under src/ automatically (`sources` strips the src/
# prefix, so src/foo installs as foo). New packages are picked up without
# touching this file; only NON-package items at the src root need excluding —
# and forgetting one ships harmless extras instead of breaking installs
# (installed plugin packages import microdrop_utils,
# template_status_and_controls, peripheral_device_controller_base, ...).
[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
exclude = [
    # non-package dirs at the src root
    "src/docs",
    "src/graphify-out",
    "src/logging_manual_test_output",
    "src/patches",
    "src/dropbot_status",       # __pycache__-only ghost of a deleted package
    "src/opendrop_status",      # __pycache__-only ghost of a deleted package
    # hidden entries at the src root (.github, .gitignore, .superpowers, ...)
    "src/.*",
    # loose files at the src root (would land in site-packages root)
    "src/*.md",
    "src/*.json",
    "src/*.yml",
    "src/*.py",
    "src/LICENSE",
    "src/pyinstaller.spec",
    "**/__pycache__",
]

# --- Shared Dependencies ---
# redis-server and ntfsutils are removed from here and placed in targets

[tool.pixi.dependencies]
apptools = ">=5.3.1,<6"
dramatiq = ">=1.18.0,<2"
envisage = ">=7.0.4,<8"
pyface = ">=8.0.0,<9"
pytest = ">=8.4.2,<9"
shapely = ">=2.1.1,<3"
pydantic = ">=2.11.7,<3"
traits = ">=7.0.2,<8"
traitsui = ">=8.0.0,<9"
redis-py = ">=6.4.0,<7"
apscheduler = ">=3.11.0,<4"
ipython = ">=9.5.0,<10"
tqdm = ">=4.67.1,<5"
ffmpeg = ">=8.0.0,<9"
mr-box-peripheral-board = ">=0.31.7,<0.32"
"svg.path" = ">=7.0,<8"
plotly = ">=6.5.2,<7"
dropbot = ">=1.73.25"
setuptools = "<=81.0.0"
pixi-pycharm = ">=0.0.10,<0.0.11"
pygame = ">=2.6"
paramiko = ">=4.0.0,<5"
pandas = ">=2.0,<3"
black = ">=26.5.1,<27"

# --- TARGET: Windows (win-64) ---
[tool.pixi.target.win-64.dependencies]
ntfsutils = ">=0.1.5,<0.2"
redis-server = ">=3.0.501,<4"

# --- TARGET: Linux (linux-aarch64) ---
[tool.pixi.target.linux-aarch64.dependencies]
redis-server = ">=6.0.0"

[tool.pixi.target.osx-arm64.dependencies]
redis-server = ">=6.0.0"

[tool.pixi.tasks]
opendrop-microdrop = { cmd = "python run_device_viewer_pluggable.py --device opendrop", cwd = "src/examples/" }
opendrop-microdrop-backend = { cmd = "python run_device_viewer_pluggable_backend.py --device opendrop", cwd = "src/examples/" }
opendrop-microdrop-frontend = { cmd = "python run_device_viewer_pluggable_frontend.py --device opendrop", cwd = "src/examples/" }
microdrop = { cmd = "python run_device_viewer_pluggable.py", cwd = "src/examples/" }
microdrop-frontend = { cmd = "python run_device_viewer_pluggable_frontend.py", cwd = "src/examples/" }
microdrop-backend = { cmd = "python run_device_viewer_pluggable_backend.py", cwd = "src/examples/" }
run_redis = { cmd = "python start_redis_server.py", cwd = "src/examples/" }
